--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "node-sass": "^4.7.2",
+    "normalize.css": "^7.0.0",
+    "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
