--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,13 @@
     }],
     "stage-2"
   ],
-  "plugins": ["transform-runtime"]
+  "plugins": [
+    ["component", [
+      {
+        "libraryName": "element-ui",
+        "styleLibraryName": "theme-chalk"
+      }
+    ]],
+    "transform-runtime"
+  ]
 }
