--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.1",
     "vue": "^2.5.2",
+    "vue-html5-editor": "^1.1.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
