--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "element-ui": "^2.0.7",
+    "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
     "sass-loader": "^6.0.6",
